fix twitter button alignment

--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -412,7 +412,7 @@ table.factory-table td, table.factory-table th {
 }
 
 .twitter-follow-button {
-	margin-left: -1px;
+	margin-left: 10px;
 }
 
 .footer {
